install octane with frankenphp worker mode

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,14 +1,11 @@
 FROM dunglas/frankenphp:php8.4
 
-# Set Caddy server name to "http://" to serve on 80 and not 443
-ENV SERVER_NAME="http://"
-
 WORKDIR /usr/src/app
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 ADD --chmod=0755 https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
-RUN install-php-extensions xdebug pgsql pdo_pgsql
+RUN install-php-extensions xdebug pgsql pdo_pgsql pcntl
 
 ENV USER=docker
 ENV GROUPNAME=$USER
@@ -28,3 +25,5 @@ RUN \
 RUN mkdir /config/psysh && chown -R ${USER}:${USER} /config/psysh
 
 RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+
+ENTRYPOINT ["php", "artisan", "octane:frankenphp", "--workers", "1", "--watch"]
