--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.11",
         "laravel/tinker": "^2.10.1",
+        "lcobucci/jwt": "^5.5",
+        "symfony/mercure": "^0.6.5",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
