--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 ADD --chmod=0755 https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
-RUN install-php-extensions xdebug pgsql pdo_pgsql pcntl
+RUN install-php-extensions xdebug pgsql pdo_pgsql pcntl redis
 
 ENV USER=docker
 ENV GROUPNAME=$USER
@@ -15,10 +15,10 @@ ENV GID=1000
 RUN addgroup --gid "$GID" "$GROUPNAME" \
  && adduser --disabled-password --gecos "" --no-create-home --ingroup "$GROUPNAME" --uid "$UID" $USER
 
+# Add additional capability to bind to port 80 and 443
+# Give write access to /data/caddy and /config/caddy
 RUN \
-  # Add additional capability to bind to port 80 and 443
   setcap CAP_NET_BIND_SERVICE=+eip /usr/local/bin/frankenphp; \
-  # Give write access to /data/caddy and /config/caddy
   chown -R ${USER}:${USER} /data/caddy && chown -R ${USER}:${USER} /config/caddy
 
 # add /config/psysh/ for laravel tinker
