--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
-        "tailwindcss": "^4.0.7",
-        "vite": "^7.0.4",
         "quill": "^2.0.3",
-        "typescript": "^5.2.2"
+        "tailwindcss": "^4.0.7",
+        "typescript": "^5.2.2",
+        "vite": "^7.0.4"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "sass-embedded": "^1.92.1"
     }
 }
