--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Color The Text"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:OvF6yA97YsV8b3B6zy0e097Py95R49eZyRjls+NcRxM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=ctt
+DB_USERNAME=ctt
+DB_PASSWORD=pass
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -33,9 +33,9 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
 CACHE_STORE=database
 # CACHE_PREFIX=
@@ -43,7 +43,7 @@ CACHE_STORE=database
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -65,4 +65,14 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 OCTANE_SERVER=frankenphp
+
 MERCURE_JWT_SECRET=InOctaneLaravelFrankenPhpMercureWeTrust
+MERCURE_URL=http://127.0.0.1:8000/.well-known/mercure
+MERCURE_TOPIC_PREFIX=color-the-text-
+
+LLM_URL_HOST=http://host.docker.internal:1234/
+LLM_PATH_MODELS=/v1/models
+LLM_PATH_CHAT=/v1/chat/completions
+
+LLM_TEMPERATURE=0.7
+LLM_RESPONSE_TIMEOUT_SECONDS=3600
