--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Color The Text"
 APP_ENV=local
-APP_KEY=base64:OvF6yA97YsV8b3B6zy0e097Py95R49eZyRjls+NcRxM=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
