--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.4",
+        "php": "^8.5",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.11",
         "laravel/tinker": "^2.10.1",
         "lcobucci/jwt": "^5.5",
-        "symfony/mercure": "^0.6.5",
+        "symfony/mercure": "^0.7.1",
         "ext-redis": "*",
         "ext-pdo": "*"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest": "^4.1",
+        "pestphp/pest-plugin-laravel": "^4.0"
     },
     "autoload": {
         "psr-4": {
